编写组件动态解析工具

--- a/src/app/shared/business/bsn-data-table/bsn-table.component.html
+++ b/src/app/shared/business/bsn-data-table/bsn-table.component.html
@@ -60,7 +60,7 @@
                 <ng-template ngFor let-col [ngForOf]="config.columns">
                     <td *ngIf="!col.hidden">
                         <ng-container *ngIf="col.editor">
-                            <div *ngIf="!editCache[data.key].edit">
+                            <div *ngIf="!editCache[data.key]['edit']">
                                 <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
                             </div>
                             <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
