--- a/src/app/shared/business/bsn-async-tree/bsn-async-tree.component.html
+++ b/src/app/shared/business/bsn-async-tree/bsn-async-tree.component.html
@@ -3,6 +3,7 @@
     [nzAsyncData]="config.asyncData" 
     [nzDefaultExpandAll]="config.expandAll"
     [nzCheckable]="config.checkable" 
-    [nzShowLine]="config.showLine" 
+    [nzShowLine]="config.showLine"
+    (nzExpandChange)="onMouseAction('expandNode', $event)"
     (nzClick)="onMouseAction('clickNode', $event)">
 </nz-tree>
