--- a/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
+++ b/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
@@ -28,6 +28,7 @@
         [(nzChecked)]="allChecked" 
         [nzIndeterminate]="indeterminate" 
         (nzCheckedChange)="checkAll($event)"
+
         >
         </th>
         <ng-template ngFor let-col [ngForOf]="config.columns">
@@ -44,36 +45,33 @@
     </tr>
 </thead>
     <tbody>
-    <ng-template ngFor let-data [ngForOf]="nzTable.data">
-            <tr (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
-                <td nzShowCheckbox [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked()">
-                </td>
-                <ng-template ngFor let-col [ngForOf]="config.columns">
-                    <td *ngIf="!col.hidden">
-                        <ng-container *ngIf="col.editor">
-                            <div *ngIf="!editCache[data.key].edit">
-                                <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
-                            </div>
-                            <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
-                                CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
-                                (updateValue)="valueChange($event)">
-                            </ng-container>
-                        </ng-container>
-                        <ng-container *ngIf="!col.editor">
-                            <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
-                        </ng-container>
-
-                    </td>
-                </ng-template>
-            </tr>
-        </ng-template>
         <ng-template ngFor let-data [ngForOf]="nzTable.data">
             <ng-template ngFor let-item [ngForOf]="expandDataCache[data.key]">
-                    <tr (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
+                    <tr *ngIf="(item.parent && item.parent.expand)||!(item.parent)" (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
                             <td nzShowCheckbox [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked()">
                             </td>
                             <ng-template ngFor let-col [ngForOf]="config.columns">
-                                <td *ngIf="!col.hidden">
+                                    <td *ngIf="col.expand && !col.hidden"
+                                    [nzIndentSize]="item.level*20"
+                                    [nzShowExpand]="!!item.Children && item.Children.length>0"
+                                    [(nzExpand)]="item.expand"
+                                    (nzExpandChange)="expandChange(expandDataCache[data.key], item, $event)"
+                                    >
+                                
+                                            <ng-container *ngIf="col.editor">
+                                                <span *ngIf="!editCache[data.key].edit">
+                                            {{!col.dataType?item[col.field]:item[col.field] | date}}
+                                                </span>
+                                                <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                                    CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                                                    (updateValue)="valueChange($event)">
+                                                </ng-container>
+                                            </ng-container>
+                                            <ng-container *ngIf="!col.editor">
+                                                <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
+                                            </ng-container>
+                                        </td>
+                                <td *ngIf="!col.expand && !col.hidden">
                                     <ng-container *ngIf="col.editor">
                                         <div *ngIf="!editCache[data.key].edit">
                                             <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
@@ -86,10 +84,9 @@
                                     <ng-container *ngIf="!col.editor">
                                         <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
                                     </ng-container>
-            
                                 </td>
                             </ng-template>
-                        </tr>
+                    </tr>
             </ng-template>
         </ng-template>
     </tbody>
