添加动态树、树节点多选、优化登录功能

--- a/src/app/shared/business/bsn-tree/bsn-tree.component.html
+++ b/src/app/shared/business/bsn-tree/bsn-tree.component.html
@@ -4,5 +4,9 @@
     [nzDefaultExpandAll]="config.expandAll"
     [nzCheckable]="config.checkable" 
     [nzShowLine]="config.showLine" 
+    [nzDefaultCheckedKeys]="checkedKeys"
+    [nzDefaultSelectedKeys]="selectedKeys"
+    [nzMultiple]="false"
+    (nzCheckBoxChange)="checkboxChange($event)"
     (nzClick)="onMouseAction('clickNode', $event)">
 </nz-tree>
