--- a/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
+++ b/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
@@ -47,8 +47,8 @@
     <tbody>
         <ng-template ngFor let-data [ngForOf]="nzTable.data">
             <ng-template ngFor let-item [ngForOf]="expandDataCache[data.key]">
-                    <tr *ngIf="(item.parent && item.parent.expand)||!(item.parent)" (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
-                            <td nzShowCheckbox [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked()">
+                    <tr *ngIf="(item.parent && item.parent.expand)||!(item.parent)" (click)="selectRow(item, $event)" [ngStyle]="{'background-color':item.selected?'rgb(236, 246, 253)':''}">
+                            <td nzShowCheckbox [(nzChecked)]="item.checked" (nzCheckedChange)="refChecked()">
                             </td>
                             <ng-template ngFor let-col [ngForOf]="config.columns">
                                     <td *ngIf="col.expand && !col.hidden"
@@ -59,13 +59,15 @@
                                     >
                                 
                                             <ng-container *ngIf="col.editor">
-                                                <span *ngIf="!editCache[data.key].edit">
-                                            {{!col.dataType?item[col.field]:item[col.field] | date}}
+                                                <span *ngIf="!editCache[item.key].edit">
+                                                    {{!col.dataType?item[col.field]:item[col.field] | date}}
                                                 </span>
-                                                <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
-                                                    CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                                                
+                                                <ng-container [bsnData]="tempParameters" [rowData]="item" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                                    CnGridEditorDirective *ngIf="editCache[item.key].edit" [config]="col.editor.options" [value]="{key:item.key,name:col.editor.field,data:editCache[item.key].data[col.editor.field]}"
                                                     (updateValue)="valueChange($event)">
                                                 </ng-container>
+
                                             </ng-container>
                                             <ng-container *ngIf="!col.editor">
                                                 <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
@@ -73,11 +75,11 @@
                                         </td>
                                 <td *ngIf="!col.expand && !col.hidden">
                                     <ng-container *ngIf="col.editor">
-                                        <div *ngIf="!editCache[data.key].edit">
+                                        <div *ngIf="!editCache[item.key].edit">
                                             <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
                                         </div>
-                                        <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
-                                            CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                                        <ng-container [bsnData]="tempParameters" [rowData]="item" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                            CnGridEditorDirective *ngIf="editCache[item.key].edit" [config]="col.editor.options" [value]="{key:item.key,name:col.editor.field,data:editCache[item.key].data[col.editor.field]}"
                                             (updateValue)="valueChange($event)">
                                         </ng-container>
                                     </ng-container>
