--- a/src/app/shared/components/cn-form-range-picker/cn-form-range-picker.component.html
+++ b/src/app/shared/components/cn-form-range-picker/cn-form-range-picker.component.html
@@ -1,16 +1,18 @@
-<div nz-form-item nz-row>
-  <div nz-form-label nz-col [nzSm]="config.labelSize" [nzXs]="24">
-    <label [attr.for]="config.name" nz-form-item-required>{{config.label}}</label>
-  </div>
-  <div [formGroup]="formGroup" nz-form-control nz-col [nzSm]="config.controlSize" [nzXs]="24">
-    <nz-rangepicker
-      formControlName="{{config.name}}"
-      [nzSize]="config.size"
-      [nzFormat]="config.format"
-      [nzDisabled]="config.disabled"
-      [nzAllowClear]=true
-      [(ngModel)]="date"
-    >
-    </nz-rangepicker>
-  </div>
-</div>
+<nz-form-label [nzSpan]="config.labelSize" [nzRequired]="config.isRequired">
+  {{config.label}}
+</nz-form-label>
+  <nz-form-control [formGroup]="formGroup" [nzSpan]="config.controlSize">
+    <nz-range-picker
+     [(ngModel)]="date"
+     formControlName="{{config.name}}"
+     nzShowTime="config.showTime"
+     [nzFormat]="config.format"
+     [nzShowToday]="config.showToday"
+     [nzAllowClear]="true"
+     ></nz-range-picker>
+    <nz-form-explain *ngIf="formGroup.get(config.name).dirty && formGroup.get(config.name).errors || formGroup.get(config.name).pending ">
+        <ng-container *ngFor="let valid of config.validations">
+              <span style="margin-top:3px" *ngIf="formGroup.get(config.name).hasError(valid.validator.toLowerCase())">{{valid.errorMessage}}</span>
+          </ng-container>
+      </nz-form-explain>
+  </nz-form-control>
