调整了部署生产环境项目的Bug

--- a/src/app/routes/dashboard/workplace/workplace.component.html
+++ b/src/app/routes/dashboard/workplace/workplace.component.html
@@ -60,8 +60,9 @@
         <nz-card nzTitle="动态" [nzBordered]="false" [nzLoading]="loading" class="ant-card__body-nopadding mb-lg active-card">
             <nz-list nzSize="large" class="activities">
                 <nz-list-item *ngFor="let item of activities">
+                        <!-- [nzAvatar]="item.user.avatar" -->
                     <nz-list-item-meta
-                        [nzAvatar]="item.user.avatar"
+                        
                         [nzTitle]="activeTitle"
                         [nzDescription]="activeDescription">
                         <ng-template #activeTitle>
