--- a/src/app/routes/settings/component-setting/component-setting.component.html
+++ b/src/app/routes/settings/component-setting/component-setting.component.html
@@ -3,7 +3,7 @@
     <nz-col [nzSpan]="24">
         <nz-card>
 
-            <form nz-form (ngSubmit)="_submitForm($event)" [nzLayout]="'inline'">
+            <form nz-form [nzLayout]="'inline'">
                 <nz-form-item>
                     <nz-form-label>
                         <label [attr.for]="'功能模块'">功能模块</label>
