--- a/src/app/routes/settings/operation-setting/operation-setting.component.html
+++ b/src/app/routes/settings/operation-setting/operation-setting.component.html
@@ -2,7 +2,7 @@
 <div nz-row [nzGutter]="8">
   <div nz-col [nzSpan]="24">
     <nz-card>
-      <form nz-form (ngSubmit)="_submitForm($event)" [nzLayout]="'inline'">
+      <form nz-form [nzLayout]="'inline'">
         <nz-form-item>
           <nz-form-label>
             功能模块
