--- a/src/app/routes/system/org-manager/org-manager.component.html
+++ b/src/app/routes/system/org-manager/org-manager.component.html
@@ -15,9 +15,9 @@
               [nzLoading]="_loading"
               [nzTotal]="_total"
               [(nzPageIndex)]="_current"
-              (nzPageIndexChange)="refreshOrg(false,$event)"
+              (nzPageIndexChange)="refreshOrg(false)"
               [nzPageSize]="_pageSize"
-              (nzPageSizeChange)="refreshOrg(true,$event)"
+              (nzPageSizeChange)="refreshOrg(true)"
               [nzBordered] = "true"
               [nzShowTotal]="totalTemplate"
               nzSize = "small" >
