--- a/src/app/routes/system/priv-manager/priv-manager.component.html
+++ b/src/app/routes/system/priv-manager/priv-manager.component.html
@@ -20,7 +20,7 @@
               [nzBordered] = "true"
               [nzShowTotal]="totalTemplate"
               nzSize = "small">
-        <thead (nzSortChange)="sort($event)" nzSingleSort>
+        <thead (nzSortChange)="sort()" nzSingleSort>
         <tr>
             <th nzShowSort nzSortKey="Name">角色名称</th>
             <th nzShowSort nzSortKey="Code">编码</th>
