--- a/src/app/routes/system/user-manager/user-role.component.html
+++ b/src/app/routes/system/user-manager/user-role.component.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="customize-footer">
-    <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside($event)">
+    <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside()">
         保 存
     </button>
     <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="handleCancel($event)">
