--- a/src/app/routes/pro/list/card-list/card-list.component.html
+++ b/src/app/routes/pro/list/card-list/card-list.component.html
@@ -27,8 +27,8 @@
             <nz-card nzHoverable *ngIf="item !== null" [nzActions]="[op1, op2]">
                 <ng-template #op1><a (click)="msg.success('操作一：' + item.id);">操作一</a></ng-template>
                 <ng-template #op2><a (click)="msg.success('操作二：' + item.id);">操作二</a></ng-template>
-                <div nz-card-meta
-                    [nzAvatar]="nzAvatar"
+                <!-- <div nz-card-meta
+                    
                     [nzTitle]="nzTitle"
                     [nzDescription]="nzDescription">
                     <ng-template #nzAvatar>
@@ -38,8 +38,9 @@
                     <ng-template #nzDescription>
                         <ellipsis>{{item.description}}</ellipsis>
                     </ng-template>
-                </div>
+                </div> -->
             </nz-card>
         </nz-list-item>
     </ng-template>
 </nz-list>
+<!-- [nzAvatar]="nzAvatar" -->
