--- a/src/app/routes/system/data-manager/type-operation.component.html
+++ b/src/app/routes/system/data-manager/type-operation.component.html
@@ -64,7 +64,7 @@
     </nz-form-item>
 
     <div class="customize-footer">
-        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside($event)">
+        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside()">
             保存
         </button>
         <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="handleCancel($event)">
