--- a/src/app/routes/system/org-manager/org-operation.component.html
+++ b/src/app/routes/system/org-manager/org-operation.component.html
@@ -47,7 +47,7 @@
         </nz-form-control>
     </nz-form-item>
     <div class="customize-footer">
-        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside($event)">
+        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside()">
             保存
         </button>
         <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="handleCancel($event)">
