--- a/src/app/routes/system/role-manager/role-operation.component.html
+++ b/src/app/routes/system/role-manager/role-operation.component.html
@@ -70,7 +70,7 @@
 
 
     <div class="customize-footer">
-        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside($event)">
+        <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside()">
             保存
         </button>
         <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="handleCancel($event)">
