--- a/src/app/shared/components/cn-form-radio-group/cn-form-radio-group.component.html
+++ b/src/app/shared/components/cn-form-radio-group/cn-form-radio-group.component.html
@@ -3,7 +3,7 @@
     <label [attr.for]="config.name" nz-form-item-required>{{config.label}}</label>
   </nz-form-label>
   <nz-form-control [formGroup]="formGroup" [nzSm]="config.controlSize" [nzXs]="24">
-    <nz-radio-group formControlName="{{config.name}}" [(ngModel)]="_radioValue" *ngFor="let opt of config.options">
+    <nz-radio-group formControlName="{{config.name}}" [(ngModel)]="model" *ngFor="let opt of config.options">
       <label nz-radio [nzValue]="opt" >
         <span>{{opt.label}}</span>
       </label>
