--- a/src/app/shared/components/cn-grid-checkbox/cn-grid-checkbox.component.html
+++ b/src/app/shared/components/cn-grid-checkbox/cn-grid-checkbox.component.html
@@ -1,3 +1,3 @@
-<label name="{{config.name}}" nz-checkbox [(ngModel)]="_checked" [nzDisabled]="config.disabled">
+<label name="{{config.name}}" nz-checkbox [(ngModel)]="model" [nzDisabled]="config.disabled">
   <span>{{config.label}}</span>
 </label>
