--- a/src/app/shared/components/cn-grid-range-picker/cn-grid-range-picker.component.html
+++ b/src/app/shared/components/cn-grid-range-picker/cn-grid-range-picker.component.html
@@ -1,10 +1,8 @@
-
-  <nz-rangepicker
-    name="{{config.name}}"
-    [nzSize]="config.size"
-    [nzFormat]="config.format"
-    [nzDisabled]="config.disabled"
-    [nzAllowClear]=true
-    [(ngModel)]="date"
-  >
-  </nz-rangepicker>
+<nz-range-picker
+[(ngModel)]="model"
+formControlName="{{config.name}}"
+nzShowTime="config.showTime"
+[nzFormat]="config.format"
+[nzShowToday]="config.showToday"
+[nzAllowClear]="true"
+></nz-range-picker>
