--- a/src/app/routes/cn-test/list/list.component.html
+++ b/src/app/routes/cn-test/list/list.component.html
@@ -1,5 +1,5 @@
 <!-- <cn-code-edit></cn-code-edit> -->
-
+<cn-form-resolver [config]="configFormNew"></cn-form-resolver>
 <nz-card>
   <bsn-tree-table></bsn-tree-table>
    <nz-table #nzTable [nzData]="data">
