--- a/src/app/shared/components/cn-form-select/cn-form-select.component.html
+++ b/src/app/shared/components/cn-form-select/cn-form-select.component.html
@@ -4,6 +4,7 @@
    <nz-form-control [formGroup]="formGroup" [nzSpan]="config.controlSize">
      <nz-select
        formControlName="{{config.name}}"
+       (ngModelChange)="valueChange($event)"
        [nzSize]="config.size"
        [nzPlaceHolder]="config.placeholder">
        <nz-option *ngFor="let option of _options"
