--- a/src/app/shared/resolver/form-resolver/form-resolver.component.html
+++ b/src/app/shared/resolver/form-resolver/form-resolver.component.html
@@ -6,7 +6,7 @@
             <ng-container *ngFor="let control of formItem.controls">
                 <!-- 垂直表单布局-->
                 <nz-form-item *ngIf="control.layout==='row'">
-                  <ng-container cnFormResolverDirective [formGroup]="form" [config]="control">
+                  <ng-container cnFormResolverDirective [formGroup]="form" [config]="control" [changeConfig]="changeConfig"  (updateValue)="valueChange($event)" >
         
                   </ng-container>
                 </nz-form-item>
@@ -14,7 +14,7 @@
                 <!-- 水平表单布局-->
                 <div nz-col [nzSpan]="control.span">
                     <nz-form-item>
-                      <ng-container cnFormResolverDirective [formGroup]="form" [config]="control">
+                      <ng-container cnFormResolverDirective [formGroup]="form" [config]="control" [changeConfig]="changeConfig" (updateValue)="valueChange($event)" >
         
                       </ng-container>
                     </nz-form-item>
