--- a/src/app/shared/resolver/form-resolver/form-resolver.component.html
+++ b/src/app/shared/resolver/form-resolver/form-resolver.component.html
@@ -4,6 +4,7 @@
     <ng-container *ngFor="let formItem of config.forms">
         <div nz-row [nzGutter]="24">
             <ng-container *ngFor="let control of formItem.controls">
+            <ng-container *ngIf="!control.hidden">  
                 <!-- 垂直表单布局-->
                 <nz-form-item *ngIf="control.layout==='row'">
                   <ng-container cnFormResolverDirective [formGroup]="form" [config]="control" [changeConfig]="changeConfig"  (updateValue)="valueChange($event)" >
@@ -20,6 +21,7 @@
                     </nz-form-item>
                   </div>
               </ng-container> 
+            </ng-container>
         </div>
     </ng-container>
 
