--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
 @content-padding: 8px;
 @font-size-base: 12px;
 @layout-gutter: 6px;
-@primary-color: #c931da;
+@primary-color: rgb(14, 201, 145);
 @form-item-margin-bottom     : 12px;
 @form-vertical-label-padding : 0 0 4px;
 @table-padding-vertical: 12px;
