--- a/src/app/routes/template/tree-and-form/tree-and-form.component.html
+++ b/src/app/routes/template/tree-and-form/tree-and-form.component.html
@@ -1,2 +1,2 @@
-<page-header [title]="'左树右表单'"></page-header>
+<page-header [title]=""></page-header>
 <cn-layout-resolver [config]="config"></cn-layout-resolver>
