--- a/src/app/routes/template/tree-and-multi-table/tree-and-multi-table.component.html
+++ b/src/app/routes/template/tree-and-multi-table/tree-and-multi-table.component.html
@@ -1,2 +1,2 @@
-<page-header [title]="'树+主系表'"></page-header>
+<page-header [title]=""></page-header>
 <cn-layout-resolver [config]="config"></cn-layout-resolver>
