--- a/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
+++ b/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
@@ -33,7 +33,7 @@
 
 
 
-<cn-component-resolver  *ngIf="!config.rows && !config.tabs"
+<cn-component-resolver  *ngIf="!config.rows && !config.tabs && !config.viewCfg" 
 [layoutId]="layoutId" 
 [blockId]="config.id" 
 [config]="config"></cn-component-resolver>
