--- a/src/app/routes/template/mulit-table/mulit-table.component.html
+++ b/src/app/routes/template/mulit-table/mulit-table.component.html
@@ -1,2 +1,2 @@
-<page-header [title]="'单表示例'"></page-header>
+<page-header [title]=""></page-header>
 <cn-layout-resolver [config]="config"></cn-layout-resolver>
