--- a/src/app/routes/template/tree-and-tabs/tree-and-tabs.component.html
+++ b/src/app/routes/template/tree-and-tabs/tree-and-tabs.component.html
@@ -1,2 +1,2 @@
-<page-header [title]="'树+标签页'"></page-header>
+<page-header [title]=""></page-header>
 <cn-layout-resolver [config]="config"></cn-layout-resolver>
