--- a/src/app/routes/template/tree-table/tree-table.component.html
+++ b/src/app/routes/template/tree-table/tree-table.component.html
@@ -1,2 +1,2 @@
-<page-header [title]="'Page Name'"></page-header>
+<page-header [title]=""></page-header>
 <cn-layout-resolver [config]="config"></cn-layout-resolver>
