--- a/src/app/shared/business/bsn-step/bsn-step.component.html
+++ b/src/app/shared/business/bsn-step/bsn-step.component.html
@@ -13,12 +13,12 @@
 </div>
 <div class="steps-action">
     <button nz-button nzType="default" (click)="pre()" *ngIf="_current > 0">
-      <span>Previous</span>
+      <span>上一步</span>
     </button>
     <button nz-button nzType="default" (click)="next()" *ngIf="_current < 2">
-      <span>Next</span>
+      <span>下一步</span>
     </button>
     <button nz-button nzType="primary" (click)="done()" *ngIf="_current === 2">
-      <span>Done</span>
+      <span>完成</span>
     </button>
   </div>
