--- a/src/app/routes/settings/block-setting/block-setting.component.html
+++ b/src/app/routes/settings/block-setting/block-setting.component.html
@@ -1,14 +1,14 @@
 <!--<div class="content__title">
     <h1>Page Name</h1>
 </div>-->
-<page-header [title]=""></page-header>
+<!-- <page-header [title]=""></page-header> -->
 <div nz-row [nzGutter]="8">
   <div nz-col [nzSpan]="24">
     <nz-card>
       <form nz-form [nzLayout]="'inline'">
           <nz-form-item>
             <nz-form-label>
-              <label [attr.for]="'功能模块'">功能模块</label>
+             功能模块
             </nz-form-label>
             <nz-form-control>
               <nz-cascader
@@ -26,7 +26,7 @@
           <nz-form-item>
             <nz-form-control>
               <nz-form-label>
-                <label [attr.for]="'布局'">模块布局列表</label>
+                模块布局列表
               </nz-form-label>
               <nz-select style="width:120px;"
                 [(ngModel)]="_layoutNameValue"
