--- a/src/app/routes/settings/layout-step-setting/layout-step-setting.component.html
+++ b/src/app/routes/settings/layout-step-setting/layout-step-setting.component.html
@@ -1,91 +1,19 @@
-<page-header [title]="''"></page-header>
-<nz-card [nzBordered]="false">
-    <div class="step-module">
-        <form nz-form [formGroup]="_formGroup" (ngSubmit)="_submitForm($event)">
-            <nz-form-item>
-                <nz-form-label [nzSpan]="2" nzFor="module">功能模块</nz-form-label>
-                <nz-form-control [nzSpan]="12" [nzSm]="12" [nzXs]="12">
-                    <nz-cascader [ngModelOptions]="{standalone: true}" [class.class123]="true" [nzOptions]="_funcOptions" [(ngModel)]="_funcValue"
-                        (nzChange)="_changeModuleValue($event)" (nzSelectionChange)="_onSelectionChange($event)" [nzPlaceHolder]="'--请选择--'"
-                        [nzExpandTrigger]="'hover'">
-                    </nz-cascader>
-                </nz-form-control>
-            </nz-form-item>
-        </form>
-    </div>
+<nz-card *ngIf="!_showGuide" [nzBordered]="false" [nzTitle]="layoutModule" [nzExtra]="extraTplModule">
+    <form nz-form>
+        <nz-form-item>
+            <nz-form-label [nzSpan]="2" nzFor="module">选择模块</nz-form-label>
+            <nz-form-control [nzSpan]="6" [nzSm]="6" [nzXs]="6">
+                <nz-cascader [ngModelOptions]="{standalone: true}" [class.class123]="true" [nzOptions]="_funcOptions" [(ngModel)]="_funcValue"
+                    (nzChange)="_changeModuleValue($event)" (nzSelectionChange)="_onSelectionChange($event)" [nzPlaceHolder]="'--请选择--'"
+                    [nzExpandTrigger]="'hover'">
+                </nz-cascader>
+            </nz-form-control>
+        </nz-form-item>
+    </form>
+</nz-card>
 
-</nz-card>
-<nz-card [nzBordered]="false">
-    <nz-steps [(nzCurrent)]="current">
-        <nz-step nzTitle="创建布局"></nz-step>
-        <nz-step nzTitle="保存布局"></nz-step>
-        <nz-step nzTitle="完成"></nz-step>
-    </nz-steps>
-    <div class="steps-content" *ngIf="current == 0">
-        <form nz-form [formGroup]="_formGroup" (ngSubmit)="_submitForm($event)">
-            <nz-form-item>
-                <nz-form-label [nzSpan]="6" nzFor="module">布局类型</nz-form-label>
-                <nz-form-control [nzSm]="18" [nzXs]="18">
-                    <nz-select [(ngModel)]="_layoutValue" (ngModelChange)="_changeLayout($event)" [nzPlaceHolder]="'--请选择--'" [ngModelOptions]="{standalone: true}">
-                        <nz-option *ngFor="let option of _layoutOptions" [nzLabel]="option.label" [nzValue]="option">
-                        </nz-option>
-                    </nz-select>
-                </nz-form-control>
-            </nz-form-item>
-            <nz-form-item>
-                <nz-form-label [nzSpan]="6" nzFor="module">功能模块</nz-form-label>
-                <nz-form-control [nzSm]="18" [nzXs]="18">
-                    <input nz-input [(ngModel)]="_configName" placeholder="请输入配置名称" [ngModelOptions]="{standalone: true}" />
-                </nz-form-control>
-            </nz-form-item>
-        </form>
-    </div>
-    <div class="steps-content2"  *ngIf="current == 1">
-       <!-- <form  class="steps-content" nz-form [formGroup]="_formGroup" (ngSubmit)="_submitForm($event)">
-            <nz-form-item>
-                <nz-form-control [nzSm]="24" [nzXs]="24">
-                    <nz-tabset *ngIf="_editorConfig" [nzTabPosition]="'left'" [nzType]="'line'">
-                        <nz-tab *ngFor="let tab of _editorConfig" [nzTitle]="tab.title">
-                            <ng-container *ngFor="let field of tab.data" cnFormResolverDirective [config]="field" [formGroup]="_formGroup"></ng-container>
-                        </nz-tab>
-                    </nz-tabset>
-                </nz-form-control>
-            </nz-form-item>
-             <nz-form-item [formGroup]="_formGroup">
-                <nz-form-control [nzOffset]="6" [nzSpan]="14">
-                    <button nz-button [nzType]="'primary'" [nzSize]="'default'">保存</button>
-                    <button nz-button [nzSize]="'default'" (click)="resetForm($event)">取消</button>
-                </nz-form-control>
-            </nz-form-item> 
-        </form>-->
-        <nz-card nzTitle="布局预览">
-                <cn-setting-layout *ngIf="previewLayoutData"  [layoutId]="_selectedLayoutId" [config]="previewLayoutData"></cn-setting-layout>
-        </nz-card>
-        
-    </div>
-    <div class="steps-content2" *ngIf="current == 2">
-        <cn-setting-layout *ngIf="previewLayoutData" [layoutId]="_selectedLayoutId"  [config]="previewLayoutData"></cn-setting-layout>
-    </div>
-    <div class="steps-action">
-            <button nz-button nzType="default" (click)="pre()" *ngIf="current > 0">
-              <span>上一步</span>
-            </button>
-            <button nz-button nzType="primary" (click)="done()" *ngIf="current === 1">
-                    <span>完成</span>
-                  </button>
-            <button nz-button nzType="default" (click)="next()" *ngIf="current < 1">
-              <span>下一步</span>
-            </button>
-            <button nz-button nzType="default" (click)="extend()" *ngIf="current === 1 && _isShowExtend">
-                    <span>扩展布局</span>
-                  </button>
-            <button nz-button nzType="primary" (click)="done()" *ngIf="current === 2">
-              <span>完成</span>
-            </button>
-          </div>
-</nz-card>
-<nz-card nzTitle="{{_selectedModuleText}}布局列表">
-    <nz-table #sqlTable [nzData]="_tableDataSource" [nzSize]="'small'" [nzLoading]="loading" [nzTotal]="total" [(nzPageIndex)]="pageIndex"
+<nz-card *ngIf="!_showGuide" [nzBordered]="false" [nzTitle]="layoutTitle">
+    <!-- <nz-table #sqlTable [nzData]="_tableDataSource" [nzSize]="'small'" [nzLoading]="loading" [nzTotal]="total" [(nzPageIndex)]="pageIndex"
         [(nzPageSize)]="pageSize">
         <thead>
             <tr>
@@ -133,6 +61,117 @@
                 </tr>
             </ng-template>
         </tbody>
-    </nz-table>
-
+    </nz-table> -->
+    <nz-list
+    class="demo-loadmore-list"
+    [nzDataSource]="_tableDataSource"
+    [nzItemLayout]="'horizontal'"
+    [nzLoading]="loading"
+    [nzRenderItem]="item"
+    [nzLoadMore]="loadMore">
+    <ng-template #item let-item>
+      <nz-list-item [nzContent]="'创建时间：' + item.CreateTime" [nzActions]="[editAction,moreAction]">
+        <ng-template #editAction><a (click)="delete(item)">删除</a></ng-template>
+        <ng-template #moreAction><a (click)="enabledLayout(item)">启用</a></ng-template>
+        <nz-list-item-meta
+            [nzTitle]="nzTitle"
+            [nzAvatar]="listImg"
+            nzDescription="{{item.Description}}">
+            <ng-template #nzTitle>
+                {{item.Name}}
+            </ng-template>
+            <ng-template #listImg>
+                <nz-avatar [nzShape]="'square'" [nzSrc]="item.TemplateImg"></nz-avatar>
+            </ng-template>
+        </nz-list-item-meta>
+      </nz-list-item>
+    </ng-template>
+    <ng-template #loadMore>
+      <div *ngIf="showLoadingMore" class="loadmore">
+        <button nz-button *ngIf="!loadingMore" (click)="onLoadMore()">loading more</button>
+        <nz-spin *ngIf="loadingMore" [nzSpinning]="loadingMore"></nz-spin>
+      </div>
+    </ng-template>
+    </nz-list>
 </nz-card>
+
+<nz-card *ngIf="_showGuide" [nzBordered]="false" [nzTitle]="layoutNav" [nzExtra]="extraTpl">
+    <nz-steps [(nzCurrent)]="current">
+        <nz-step nzTitle="创建布局" nzDescription="{{_selectedModuleText}}"></nz-step>
+        <nz-step nzTitle="区域编辑" nzDescription="{{_configName}}"></nz-step>
+        <nz-step nzTitle="完成" nzDescription="{{_configSuccess}}"></nz-step>
+    </nz-steps>
+    <div class="steps-content" *ngIf="current == 0">
+        <form nz-form [formGroup]="_formGroup" (ngSubmit)="_submitForm($event)">
+            <nz-form-item>
+                <nz-form-label [nzSpan]="2" nzFor="module">布局类型</nz-form-label>
+                <nz-form-control>
+                    <nz-select [(ngModel)]="_layoutValue" (ngModelChange)="_changeLayout($event)" [nzPlaceHolder]="'--请选择--'" [ngModelOptions]="{standalone: true}">
+                        <nz-option nzCustomContent [nzLabel]="option.label" *ngFor="let option of _layoutOptions" [nzValue]="option">
+                            <img src="{{option.value.img}}" /> {{option.label}}
+                        </nz-option>
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-label [nzSpan]="2" nzFor="module">布局名称</nz-form-label>
+                <nz-form-control>
+                    <input nz-input [(ngModel)]="_configName" placeholder="请输入配置名称" [ngModelOptions]="{standalone: true}" />
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-label [nzSpan]="2" nzFor="module">布局描述</nz-form-label>
+                <nz-form-control>
+                    <input nz-input [(ngModel)]="_configDesc" [ngModelOptions]="{standalone: true}" />
+                </nz-form-control>
+            </nz-form-item>
+        </form>
+    </div>
+    <div class="steps-content2" *ngIf="current == 1">
+        <nz-card nzTitle="布局预览">
+            <nz-spin [nzSpinning]="isShowPreview">
+                    <cn-setting-layout *ngIf="previewLayoutData" [layoutId]="_selectedLayoutId" [config]="previewLayoutData"></cn-setting-layout>
+            </nz-spin>
+        </nz-card>
+
+    </div>
+    <div class="steps-content2" *ngIf="current == 2">
+        <cn-setting-layout *ngIf="previewLayoutData" [layoutId]="_selectedLayoutId" [config]="previewLayoutData"></cn-setting-layout>
+    </div>
+    <div class="steps-action">
+        <button nz-button nzType="primary" (click)="done()" *ngIf="current === 1">
+            <span><i class="anticon anticon-check"></i> 完成</span>
+        </button>
+        <button nz-button nzType="default" (click)="next()" *ngIf="current < 1">
+            <span>下一步 <i class="anticon anticon-right"></i></span>
+        </button>
+        <button nz-button nzType="default" (click)="pre()" *ngIf="current > 0 && current < 2">
+            <span><i class="anticon anticon-left"></i> 上一步</span>
+        </button>
+
+        <button nz-button nzType="default" (click)="extend()" *ngIf="current === 1 && _isShowExtend">
+            <span>扩展布局</span>
+        </button>
+    </div>
+</nz-card>
+
+<ng-template #extraTplModule>
+    <button nz-button *ngIf="!_showGuide" (click)="showGuide()" nzType="primary">
+        <i class="anticon anticon-plus"></i>创建布局</button>
+</ng-template>
+<ng-template #extraTpl>
+    <button (click)="showGuide()" nz-button nzType="primary">
+        <i class="anticon anticon-rollback"></i> 返回</button>
+</ng-template>
+<ng-template #layoutModule>
+    <span>
+        <i class="anticon anticon-appstore"></i> 功能模块</span>
+</ng-template>
+<ng-template #layoutTitle>
+    <span>
+        <i class="anticon anticon-table"></i> 布局列表</span>
+</ng-template>
+<ng-template #layoutNav>
+    <span>
+     布局向导 <i class="anticon anticon-arrow-right"></i></span>
+</ng-template>
