--- a/src/app/routes/settings/layout-step-setting/layout-step-setting.component.less
+++ b/src/app/routes/settings/layout-step-setting/layout-step-setting.component.less
@@ -1,8 +1,29 @@
 :host {
 	display: block;
+	:host ::ng-deep .demo-loadmore-list {
+		min-height: 350px;
+	  }
+	:host ::ng-deep .loadmore {
+	text-align: center;
+	margin-top: 12px;
+	height: 32px;
+	line-height: 32px;
+	}
+	:host ::ng-deep .listImg {
+		width: 32px;
+		height:32px;
+		background: transparent;
+		line-height: 1.5;
+		margin:0;
+		padding:0;
+		position:relative;
+		white-space: nowrap;
+		 vertical-align: middle;
+		 overflow: hidden;
+	}
 	::ng-deep {
 		.ant-steps {
-			max-width: 750px;
+			// max-width: 750px;
 			margin: 16px auto;
         }
 
@@ -41,12 +62,12 @@
 		}
 
 		.steps-action {
-			margin-top: 24px;
-			max-width: 300px;
-			margin: 16px auto;
+			margin-top: 12px;
+			// max-width: 750px;
 		  }
 		  .steps-action button{
-			  margin-right:8px;
+			  float:right;
+			  margin-left:5px;
 		  }
 		  
 		  .templateTitle {
